--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.3",
+    "dompurify": "^2.4.0",
     "formik": "^2.2.9",
     "material-ui-confirm": "^3.0.4",
     "react": "^18.1.0",
